--- a/src/main/resources/templates/admin/database/restore.html
+++ b/src/main/resources/templates/admin/database/restore.html
@@ -14,6 +14,12 @@
     <link href="/resource/css/style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/resource/js/webuploader-0.1.5/webuploader.css">
     <link rel="stylesheet" type="text/css" href="/resource/js/jQueryMessage/css/message.skin.css" />
+    <style type="text/css">
+    .file-item{display:flex;align-items: center;height: 50px;justify-content: space-between;}
+   	.file-item .info,.file-item .state{margin:0;padding:0;}
+   	.file-item .state{margin-left:50px;}
+   	.file-item .close{cursor: pointer;}
+    </style>
 </head>
 
 <body>
@@ -35,13 +41,13 @@
 		        <form class="col s12" id="form1">
 		        	<input type="hidden" id="filepath" name="filepath"/>
 		        	<div class="form-group form-control-medium">
-						<label for="imagePath">缩略图：</label>
+						<label for="imagePath">选择数据库文件：</label>
 						<div id="uploader" class="wu-example">
 						    <!--用来存放文件信息-->
 						    <div id="thelist" class="uploader-list"></div>
 						    <div class="btns">
 						        <div id="picker">选择文件</div>
-						        <button id="ctlBtn" class="btn btn-default">开始上传</button>
+						        <button type="button" onclick="uploadFile();" id="ctlBtn" class="btn btn-default">开始上传</button>
 						    </div>
 						</div>
 					</div>
@@ -59,34 +65,64 @@
 <script type="text/javascript" src="/resource/js/jQueryMessage/js/jquery.plugin.message.js"></script>
 <script type="text/javascript">
 $(document).ready(function () {
-	initUploader("picker","filepath");
+	//初始化上传组件
+	initUploader("picker","file-priview","filepath");
 })
 
-$list = $("#thelist");
-function initUploader(picker,inputEl){
-   	var uploader = WebUploader.create({
-   		auto: true,
+//初始化上传组件
+function initUploader(picker,el,inputEl){
+   	uploader = WebUploader.create({
         // swf文件路径
         swf: '/resource/js/webuploader-0.1.5/Uploader.swf',
         // 文件接收服务端。
         server: '/upload/uploadFile',
         // 选择文件的按钮。可选。
-        compress: false,
         // 内部根据当前运行是创建，可能是input元素，也可能是flash.
         pick: '#' + picker,
-        fileNumLimit: 1,
+        fileNumLimit: 100,
         // 不压缩image, 默认如果是jpeg，文件上传前会压缩一把再上传！
-        resize: false
+        resize: false,
+        accept: {
+        	title: 'Images',
+        	extensions: 'sql,txt',
+        }
     });
-   	uploader.on( 'fileQueued', function( file ) {
-   	    $list.append( '<div id="' + file.id + '" class="item">' +
+    // 验证文件格式以及文件大小
+    uploader.on("error", function (type) {
+    	var msg = "";
+        if (type == "Q_TYPE_DENIED") {
+            msg = "请上传SQL、TXT格式文件";
+        }else {
+            msg = "上传出错！请检查后重新上传！错误代码" + type;
+        }
+		$("body").MessageBox({
+			type: 'error',
+			message: msg,
+			timeout:3000,
+			callbak:null
+		});
+    });
+   	// 当有文件被添加进队列的时候
+   	uploader.on('fileQueued', function(file) {
+   	    $("#thelist").append( '<div id="' + file.id + '" class="file-item">' +
    	        '<h4 class="info">' + file.name + '</h4>' +
    	        '<p class="state">等待上传...</p>' +
-   	    '</div>');
+   	        '<i class="close fa fa-times-circle" onclick="removeFile(\''+file.id+'\')"></i>' +
+   	    '</div>' );
    	});
     uploader.on('uploadSuccess', function(file, response) {
-    	console.log(response);
-        $("#"+inputEl).val(response.data.filepath);
+    	var val = $("#"+inputEl).val();
+    	if(val !== null && val !== "" && val !== "undefined"){
+    		val = val + "," + response.data.filepath;
+    	}
+        $("#"+inputEl).val(val);
+        $("body").MessageBox({
+			type: 'success',
+			message: '上传成功！',
+			timeout:3000,
+			callbak:null
+		});
+        $("#" + file.id + ">.state").html('上传成功！');
     });
     uploader.on('uploadError', function( file ) {
     	$("body").MessageBox({
@@ -96,7 +132,28 @@ function initUploader(picker,inputEl){
 			callbak:null
 		});
     });
-   }
+}
+
+//上传文件
+function uploadFile(){
+    var files = uploader.getFiles().length;
+    if (files > 0) {
+        uploader.upload();
+    } else {
+    	$("body").MessageBox({
+			type: 'error',
+			message: '请选择文件！',
+			timeout:3000,
+			callbak:null
+		});
+    }
+}
+
+//删除文件上传队列
+function removeFile(id){
+	uploader.removeFile(id, true);
+	$("#thelist").html("");	
+}
 </script>			
 </body>
 </html>
