--- a/src/main/resources/templates/admin/database/restore.html
+++ b/src/main/resources/templates/admin/database/restore.html
@@ -38,8 +38,7 @@
 	<div class="col-lg-12">
 		<section class="panel">
 		    <div class="panel-body">
-		        <form class="col s12" id="form1">
-		        	<input type="hidden" id="filepath" name="filepath"/>
+		        <form class="col s12" id="form1" method="POST">
 		        	<div class="form-group form-control-medium">
 						<label for="imagePath">选择数据库文件：</label>
 						<div id="uploader" class="wu-example">
@@ -47,31 +46,54 @@
 						    <div id="thelist" class="uploader-list"></div>
 						    <div class="btns">
 						        <div id="picker">选择文件</div>
-						        <button type="button" onclick="uploadFile();" id="ctlBtn" class="btn btn-default">开始上传</button>
 						    </div>
 						</div>
 					</div>
 		            <div class="form-btn-group-left">
-		            	<button type="button" class="btn btn-info" id="save">还原</button>
+		            	<button type="button" class="btn btn-info" onclick="confrim();">还原</button>
 		            </div>
 		        </form>
 		    </div>
 		</section>
 	</div>
 </div>
+<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="confrim-dialog" class="modal fade">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                  <h4 class="modal-title">操作提示？</h4>
+              </div>
+              <div class="modal-body">
+              	<div class="alert alert-block alert-danger">
+                   <strong>注意!</strong> 备份还原操作，会对原数据库数据表进行删除重建。
+                </div>
+				<h4 class="modal-title">您确定要执行还原操作吗？</h4>
+              </div>
+              <div class="modal-footer">
+              	<button type="button" class="btn btn-primary btn-addon btn-sm" onclick="restore();">确定</button>
+            	<button type="button" class="btn btn-default btn-sm" data-dismiss="modal">取消</button>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- jQuery 2.0.2 -->
 <script src="/resource/js/jquery.min.js" type="text/javascript"></script>
+<!-- Bootstrap -->
+<script src="/resource/js/bootstrap.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="/resource/js/webuploader-0.1.5/webuploader.js"></script>
 <script type="text/javascript" src="/resource/js/jQueryMessage/js/jquery.plugin.message.js"></script>
 <script type="text/javascript">
+var files = 0;
 $(document).ready(function () {
 	//初始化上传组件
-	initUploader("picker","file-priview","filepath");
+	initUploader("picker","file-priview");
 })
 
 //初始化上传组件
-function initUploader(picker,el,inputEl){
+function initUploader(picker,el){
    	uploader = WebUploader.create({
+   		auto: true,
         // swf文件路径
         swf: '/resource/js/webuploader-0.1.5/Uploader.swf',
         // 文件接收服务端。
@@ -104,18 +126,18 @@ function initUploader(picker,el,inputEl){
     });
    	// 当有文件被添加进队列的时候
    	uploader.on('fileQueued', function(file) {
+   		$("#form1").prepend("<input id='file-input-" + file.id + "' type='hidden' name='files[" + files + "]' />");
+   		
    	    $("#thelist").append( '<div id="' + file.id + '" class="file-item">' +
    	        '<h4 class="info">' + file.name + '</h4>' +
    	        '<p class="state">等待上传...</p>' +
    	        '<i class="close fa fa-times-circle" onclick="removeFile(\''+file.id+'\')"></i>' +
    	    '</div>' );
+   		
+   		files++;
    	});
     uploader.on('uploadSuccess', function(file, response) {
-    	var val = $("#"+inputEl).val();
-    	if(val !== null && val !== "" && val !== "undefined"){
-    		val = val + "," + response.data.filepath;
-    	}
-        $("#"+inputEl).val(val);
+    	$("#file-input-"+file.id).val(response.data.filepath);
         $("body").MessageBox({
 			type: 'success',
 			message: '上传成功！',
@@ -134,25 +156,60 @@ function initUploader(picker,el,inputEl){
     });
 }
 
-//上传文件
-function uploadFile(){
-    var files = uploader.getFiles().length;
-    if (files > 0) {
-        uploader.upload();
-    } else {
-    	$("body").MessageBox({
-			type: 'error',
-			message: '请选择文件！',
-			timeout:3000,
-			callbak:null
-		});
-    }
-}
-
 //删除文件上传队列
 function removeFile(id){
 	uploader.removeFile(id, true);
-	$("#thelist").html("");	
+	$("#file-input-"+ id).remove();
+	$("#" + id).remove();	
+}
+
+function confrim(){
+	var inputs = $("input[id^='file-input-']");
+	if(inputs.length <= 0){
+		$("body").MessageBox({
+			type: 'error',
+			message: "请先选择备份文件！",
+			timeout:3000,
+			callbak:null
+		});
+		return;
+	}
+	$("#confrim-dialog").modal();
+}
+//还原数据库
+function restore(){
+	var inputs = $("input[id^='file-input-']");
+	
+	var datas = new Array();
+	for(var i = 0;i < inputs.length;i++){
+		datas.push($(inputs[i]).val());
+	}
+	
+	$.ajax({
+		url : "/admin/database/restore",
+		contentType : 'application/json',
+		data : JSON.stringify(datas),
+		type : "POST",
+		dataType : "JSON",
+		success : function(result) {
+			$("#confrim-dialog").modal('hide');
+			if(result.success){
+				$("body").MessageBox({
+					type: 'success',
+					message:result.info,
+					timeout:3000,
+					callbak:null
+				});
+			}else{
+				$("body").MessageBox({
+					type: 'error',
+					message:result.info,
+					timeout:3000,
+					callbak:null
+				});
+			}
+		}
+	});
 }
 </script>			
 </body>
